cli in progress and test

--- a/package.json
+++ b/package.json
@@ -32,12 +32,16 @@
   "bugs": {
     "url": "https://github.com/yadigarcia/LIM018-md-links/issues"
   },
+  "bin": {
+    "links": "./cli.js"
+  },
   "homepage": "https://github.com/yadigarcia/LIM018-md-links#readme",
   "dependencies": {
     "chalk": "^5.0.1",
     "clear": "^0.1.0",
     "colors": "^1.4.0",
     "figlet": "^1.5.2",
+    "gradient": "^0.2.0",
     "gradient-string": "^2.0.2",
     "node-fetch": "^2.6.7"
   }
